# Deprecated

./: README.md  proxy_table.implementation.hxx  proxy_table.interface.hxx  smart_ptr.hxx
2022/: ELEMENT_STATUS.h  Frogman Library.sln  Library Debugger.cpp  Library Debugger.vcxproj  Library Debugger.vcxproj.filters  TYPE_COMPARISON_RESULT.h  common_definitions-v2.h  common_definitions.h  dynamic_array.h  dynamic_array.hxx  element.hxx  mstring.cpp  mstring.hpp  singleton.hxx  string.cpp  string.h  typeinfo-v2.h  typeinfo.cpp  typeinfo.h
2022 vol 2/: Frogman API Lab.sln  Frogman API Lab.vcxproj  Frogman API Lab.vcxproj.filters  test main.cxx
2022 vol 2/source/: core.debug.h  core.engine definitions.h  core.flags.h  core.macro restrictions.h  kismet.math.vector.hxx  memory.allocator.hxx  memory.double buffer.hxx  memory.dynamic array.hxx  memory.indirect.hxx  memory.unique.hxx  utility.clock.hpp  utility.math.hxx  utility.random.h  utility.singleton.hxx
2022 vol 2/x64/Debug/: Frogman API Lab.exe.recipe  Frogman API Lab.vcxproj.FileListAbsolute.txt
2022 vol 3/: Frogman-API-Unit-Tests.sln  LICENSE  ReadMe.md  windows.ruleset
2022 vol 3/Frogman-API-Core-Library-Unit-Test/: memory_block-unit-test.cpp
2022 vol 3/Frogman-API-Static-Library-Builder/Linux/g++-12-Compiler/: CMakeLists.txt
2022 vol 3/Frogman-API-Static-Library-Builder/Windows/: Frogman-API-Static-Library-Builder.sln  Libraries-Source-Code.cpp
2022/Frogman Editor Library/: Frogman Editor Library.vcxproj  Frogman Editor Library.vcxproj.filters
2022/Frogman Editor Template Library/: Frogman Editor Template Library.vcxproj
2022/Frogman Engine API/Frogman Engine DLL/: Frogman Engine.aps  Frogman Engine.cpp  Frogman Engine.def  Frogman Engine.rc  Frogman Engine.sln  Frogman Engine.vcxproj  Frogman Engine.vcxproj.filters  Resource.h  dllmain.cpp
2022/Frogman Engine Library/: Frogman Engine Library.vcxproj
2022/Frogman Engine Template Library/: Frogman Engine Template Library.vcxproj
2022/Frogman Fundamental Library/: Frogman Fundamental Library.vcxproj
2022/Frogman Fundamental Template Library/: Frogman Fundamental Template Library.vcxproj  Frogman Fundamental Template Library.vcxproj.filters
2022/idea/: EDP.txt  links.txt
2023/: array.implementation.hxx  array.interface.hxx  concurrent_memory_block-test.cpp  cstring.hxx  format_string_recursive.hxx  optional.hxx  parallel.array.cxx  parallel.array.hxx  parallel.memory_block_allocator.cxx  parallel.memory_block_allocator.hxx  proxy_ptr.implementation.hxx  proxy_ptr.interface.hxx  proxy_table.implementation.hxx  proxy_table.interface.hxx  shared_ref-test.cpp  shared_ref.hxx  unique_ptr.implementation.hxx  unique_ptr.interface.hxx
2024/: array_impl.hxx  char_traits.hxx  concurrent_unique_ptr.hxx  exclusive_ptr.hxx  lambda.hpp  sin-cos-simd.cpp  task_queue.hxx
2025/: mutex.hxx
2026/: arena.hxx  game_processor.hxx  gc.hxx  processors.hxx
Buggy-Framework-v1/: main  main.cpp
Buggy-Framework-v2/: main  main.cpp
Deprecated Code 2022/: TYPE_COMPARISON_RESULT.h  common_definitions-v2.h  common_definitions.h  element.hxx  mstring.cpp  mstring.hpp
Deprecated Code 2022 v1/: ELEMENT_STATUS.h  TYPE_COMPARISON_RESULT.h  common_definitions.h  dynamic_array.hxx  element.hxx  mstring.cpp  mstring.hpp  singleton.hxx  typeinfo.cpp  typeinfo.h
Deprecated Code 2022 v2/: common_definitions.h  dynamic_array.h  string.cpp  string.h  typeinfo.h
Deprecated Code 2022 v3/: Frogman API Lab.sln  Frogman API Lab.vcxproj  Frogman API Lab.vcxproj.filters  test main.cxx
Deprecated Code 2022 v3/source/: core.debug.h  core.engine definitions.h  core.flags.h  core.macro restrictions.h  core.types.h  kismet.math.vector.hxx  memory.allocator.hxx  memory.double buffer.hxx  memory.dynamic array.hxx  memory.indirect.hxx  memory.string.hxx  memory.unique.hxx  utility.clock.hpp  utility.math.hxx  utility.singleton.hxx
Deprecated Code 2023 v1/: parallel.array.cxx  parallel.array.hxx  parallel.memory_block_allocator.cxx  parallel.memory_block_allocator.hxx  proxy_ptr.implementation.hxx  proxy_ptr.interface.hxx  unique_ptr.implementation.hxx  unique_ptr.interface.hxx
Deprecated Code 2023 v2/: array.implementation.hxx  array.interface.hxx
Deprecated Code 2023 v3/: cstring.hxx  optional.hxx  push_target_values.hxx
Deprecated Code 2024 v1/: fstring.hxx  string.hxx  string_view.hxx  tagged_object.hxx  vector.cpp  vector.hpp
Deprecated Code 2025/: smart_ptr.hxx
FE/core/: allocator.hxx  block_pool.hxx  block_pool_allocator.hxx  char_traits.hxx  clock.hpp  fstream_guard.hxx  fstring.hxx  function.hxx  hash.hpp  iterator.hxx  memory.hxx  memory_block.hxx  memory_metrics.h  mutex.hpp  pair.hxx  pool.hxx  pool_allocator.hxx  prerequisites.h  random.hxx  singleton.hxx  smart_ptrs.h  string.hxx  string_view.hxx  thread.hpp  type_traits.hxx  types.hxx
FE/framework/: framework.hpp
FE/miscellaneous/: configuration.h  define_max_min.h  google_test_extension.h  misc.h  undefine_max_min.h
Frogman_Engine_Lab_Legacy_2022/: Frogman-API-Core-Library-Unit-Test.vcxproj  LICENSE  ReadMe.md  Set-Up-CMake-On-Linux.tar.xz  cpp.hint  windows.ruleset
Frogman_Engine_Lab_Legacy_2022/Frogman-API-Core-Library-Unit-Test/: allocator_adaptors-unit-test.cpp  cstring-unit-test.cpp  movable_scoped_ref-unit-test.cpp  string_algorithm-unit-test.cpp  thread-mutex-unit-test.cpp
Frogman_Engine_Lab_Legacy_2022/Frogman-API-Core-Library/Frogman-API-Core-Library-Debugger/Linux/: CMakeLists.txt
Frogman_Engine_Lab_Legacy_2022/Frogman_API_Memory_Utilization_Analyzer/: Frogman_API_Memory_Utilization_Analyzer.py
Frogman_Engine_Lab_Legacy_2022/Unit-Test-Linux-CMake-Project/: CMakeLists.txt  Frogman_API_Unit_Test.test_exe
Unusable Code Collection 2023 v4/: array_view.hxx  async.hpp  concurrent_memory_block-test.cpp  concurrent_memory_block.hxx  concurrent_singleton.hxx  deque.hxx  hash_map.hxx  list.hxx  shared_ref-test.cpp  shared_ref.hxx
Unused-Code-Collection/: array.hxx  hash_multimap-test.cpp  hash_multimap.hxx  index_map-test.cpp  index_map.hxx  ptr.hxx  trackable.hxx  unique_ptr.hxx
(+264 files in other folders)
